refactor: :recycle: build fixing
fixed upload avatar endpoint on vercel because it doesn't support writing to file system so i used uploadthing.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 @import './lib/styles/dracula.css';
+@source "../node_modules/@uploadthing/react/dist";
 
 @custom-variant dark (&:is(.dark *));
 
